<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddIngredient"
    tools:showIn="@layout/activity_add_ingredient">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredient_name"
                android:maxLength="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="431dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/coordinate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/coordinate"
                android:inputType="number|numberSigned"
                android:maxLength="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textSize="24sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="299dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/hold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hold"
                android:maxLength="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textSize="24sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="168dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/wait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wait"
                android:maxLength="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:onClick="addIngredient"
        android:text="@string/addIngredient"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</android.support.constraint.ConstraintLayout>